sass/main.scss
//-----genral-----
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  @media only screen and (max-width: 38.75em) {
    font-size: 50%;
  }
  
  @media only screen and (max-width: 35em) {
    font-size: 45%;
  }
  font-size: 62.5%;
}

body {
  height: 100vh;
  width: 100%;
  color: white;
  font-family: "Saira Stencil One", sans-serif;
  background-image: url(../img/what-the-hex.png);
  text-align: center;

  animation: animateBG 3s linear infinite;
  // background-size:;

  display: grid;
  grid-template-rows: repeat(3, min-content);
  grid-template-columns:
    [full-start] minmax(1rem, 1fr)
    [center-start] minmax(min-content, 60rem) [center-end]
    minmax(1rem, 1fr) [full-end];
  grid-row-gap: 2rem;
  align-content: center;

  @media only screen and (max-width: 35em) {
    grid-template-columns:
      [full-start] minmax(1rem, 1fr)
      [center-start] minmax(min-content, 40rem) [center-end]
      minmax(1rem, 1fr) [full-end];
      
      grid-row-gap: 3rem;

  }
}

//----text-----
.heading-1 {
  padding: 1rem;
  font-size: 6rem;
  text-shadow: -0.5rem 0.5rem 0.1rem pink;
  grid-row: 1/2;
  grid-column: center-start/center-end;
  align-self: stretch;
  justify-self: stretch;
  color: #11998e;
  
 
}

.copyright {
  font-family: sans-serif;
  font-size: 1.2rem;
  padding: 2rem;
  padding-top: 1rem;
  grid-row: 3/4;
  grid-column: center-start/center-end;
  color: #11998e;

  a {
    color: pink;
    font-size: 1.3rem;
  }
}

//------------board------------
.container {
  grid-row: 2/3;
  grid-column: center-start / center-end;
  color: black;
  background-color: #11998e;
  border-radius: 10px;
  justify-content: center;
  box-shadow: -1rem 1rem 0px pink;
  padding: 1rem;
  display: grid;
  grid-template-rows: repeat(4, minmax(min-content, 10rem));
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 1rem;
  grid-auto-flow: column;

  @media only screen and (max-width: 35em) {
    grid-template-rows: repeat(5, minmax(min-content, 8rem));
    grid-template-columns: repeat(4, 1fr);
  }
}

//-----------card-----------
.card__container {
  font-size: 3rem;
  position: relative;
  cursor: pointer;
  perspective: 200rem;
  transform-style: preserve-3d;
}

.card__container.open {
  .card__face--front {
    transform: rotateY(-180deg);
  }

  .card__face--back {
    transform: rotateY(0);
  }
}

.card__face {
  position: absolute;
  height: 100%;
  width: 100%;
  backface-visibility: hidden;
  border-radius: 10px;
  transition: all 1s ease;
  background-color: white;

  &--front {
    background-image: url("../img/001-cat.png");
    background-position: center;
    background-size: 70%;
    background-repeat: no-repeat;
    filter: grayscale(100%) opacity(50%);
  }

  &--back {
    transform: rotateY(180deg);
    display: flex;
    justify-content: center;
    align-items: center;
    img {
      height: 80%;
    }
  }
}

// -----------score-------
.score {
  grid-row: 1/-1;
  grid-column: 5/6;
  border-radius: 10px;
  height: 100%;

  @media only screen and (max-width: 35em) {
    grid-row: 1/2;
    grid-column: 1/-1;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
  }

  font-size: 3rem;
  display: grid;
  grid-template-rows: repeat(4, 1fr);
  align-items: center;
  color: white;
  &__moves {
    @media only screen and (max-width: 35em) {
      grid-row: 1/2;
      grid-column: 1/2;
    }
    grid-row: 1/2;
    display: flex;
    flex-direction: column;
  }

  &__timer {
    @media only screen and (max-width: 35em) {
      grid-row: 1/2;
      grid-column: 2/3;
    }
    grid-row: 2/3;
    display: flex;
    flex-direction: column;
  }

  &__reset {
    @media only screen and (max-width: 35em) {
      grid-row: 1/2;
      grid-column: 3/4;
      
      height: 60%;
      width: 60%;
    }

    grid-row: 3/4;
    border: pink 1px solid;
    justify-self: center;
    align-self: center;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 60%;
    width: 80%;
    border-radius: 10px;
    background-color: pink;
    box-shadow: -0.4rem 0.5rem 0.1rem white;
    transition: all 0.2s;
    transform: translateX(0.4rem);
    &--img {
      width: 45%;
    }

    &:active {
      box-shadow: none;
      transform: translate(-0.5rem, 0.4rem);
    }
  }
}

//-----animation
@keyframes animateBG {
  0% {
    background-position: top;
  }
  100% {
    background-position: bottom;
  }
}

